Archive2/40/7723b50af39297/output
main.cpp: In function 'int main()':
main.cpp:3:14: error: invalid conversion from 'int' to 'int*' [-fpermissive]
     int* y = x;
              ^
