Archive2/40/7723b50af39297/main.cpp
int main() {
    const int x = 0;
    int* y = x;
    int* z = x+x;
}